@@ -1,0 +1,18 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+           i18n_domain="collective.xmpp.core">
+
+  <!-- 0.1a6 => 0.1a7 -->
+  <genericsetup:upgradeSteps source="1"
+                             destination="1.7"
+                             profile="collective.xmpp.core:default">
+
+    <genericsetup:upgradeStep title="Added new entry in portal_registry"
+                              handler="collective.xmpp.core.upgrades.evolve17.update_registry" />
+
+    <genericsetup:upgradeDepends title="Import local component registry configuration"
+                                 import_steps="componentregistry" />
+
+  </genericsetup:upgradeSteps>
+
+</configure>
